[package]
name = "mqtt-smarthome"
version = "0.4.1"
license = "MIT"
repository = "https://github.com/EdJoPaTo/mqtt-smarthome"
authors = ["EdJoPaTo <mqtt-smarthome-rust@edjopato.de>"]
edition = "2021"
rust-version = "1.70"

[features]
tls = ["rumqttc/use-rustls"]

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dependencies]
rumqttc = { version = "0.24", default-features = false }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
float_eq = "1"
rstest = { version = "0.24", default-features = false }
